--- a/src/layout-components/navbar/Navbar.scss
+++ b/src/layout-components/navbar/Navbar.scss
@@ -8,9 +8,10 @@
 .sidebar-button {
   border-radius: 5px;
   border: 1px solid gray;
-  padding: 8px 12px 5px 13px;
+  padding: 0px 10px;
+  margin-top: 2px;
   height: 32px;
-  font-size: 16px;
+  // font-size: 16px;
 }
 
 .navbar-button {
@@ -35,11 +36,7 @@
 }
 
 .navbar-user-icon {
-  color: white;
   margin-right: 7px;
-  padding: 4px 5px 6px 5px;
-  border-radius: 15px;
-  margin-top: -2px;
 }
 
 .navbar-user-name {
