--- a/src/layout-components/Layout.scss
+++ b/src/layout-components/Layout.scss
@@ -3,13 +3,6 @@
   height: 100vh;
 }
 
-.layout-row {
-  margin: 0px;
-  margin-top: 15px;
-}
-
-.layout-col {
-  padding-left: 15px; 
-  padding-right: 15px; 
-  // border: 1px solid grey;
+.layout-children-container {
+  padding: 15px;
 }
