--- a/src/layout-components/footer/Footer.scss
+++ b/src/layout-components/footer/Footer.scss
@@ -1,13 +1,15 @@
 .footer-row-top {
   background-color: white;
   border-top: 1px solid gainsboro;
-  padding: 0px 20px 20px 20px;
+  padding: 0px 5px 20px 5px;
+  margin: 0px;
 }
 
 .footer-row-bottom {
-  padding: 10px 20px 10px 20px;
+  padding: 10px 10px 10px 10px;
   color: white;
   border-bottom: 1px solid gainsboro;
+  margin: 0px;
 }
 
 .footer-link {
